<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2013 Mustafa Ali
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">Sensor colectivo</string>
    <string name="action_about">About</string>
	<string name="action_close">Cerrar</string>
    <string name="action_share">Compartir</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="send_to">Send to</string>
    <string name="share_text">Se parte de este grqn proyecto y baja la aplicación en Google Play - https://play.google.com/store/apps/details?id=cl.finhub.sismic</string>
    <string name="about_text">Demo application to demonstrate how to use onboard sensors in Android by\nMustafa Ali\nhttps://twitter.com/mustafa01ali</string>
    <string name="source_code_link">Source code available at\nhttps://github.com/mustafa01ali/SensorsSandbox</string>
    <string name="title_vendor">Vendor: </string>
    <string name="title_version">Version: </string>
    <string name="title_maximum_range">Maximum Range: </string>
    <string name="title_minimum_delay">Minimum Delay: </string>
    <string name="title_resolution">Resolution: </string>
    <string name="title_power_consumption">Power Consumption: </string>
    <string name="title_live_data">Sensor: </string>
	<string name="title_registros">Registros: </string>
	<string name="title_velocidad">Velocidad: </string>
	<string name="title_ubicacion">Ubicación: </string>
	<string name="title_lupdate">Actualización: </string>
	<string name="title_banda_media">Banda media: </string>
    <string name="title_type">Type: </string>
    <string name="msg_waiting_for_data">Waiting for data&#8230;</string>
</resources>
