
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    style="@style/match"
    tools:context=".MainActivity" >

    <Spinner
        android:id="@+id/sensors_spinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
		android:id="@+id/scroll"
        style="@style/block"
        android:layout_below="@+id/sensors_spinner" >

        <LinearLayout
            style="@style/block"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="vertical">
			
			<LinearLayout
				style="@style/block"
				android:orientation="horizontal" >

            	<TextView
                	style="@style/labelStyle"
                	android:text="@string/title_registros" />

            	<TextView
                	android:id="@+id/registros_tv"
                	style="@style/data" />
			</LinearLayout>

			<LinearLayout
				style="@style/block"
				android:orientation="horizontal" >

            	<TextView
                	style="@style/labelStyle"
                	android:text="@string/title_velocidad" />

            	<TextView
                	android:id="@+id/velocidad_tv"
                	style="@style/data" />
			</LinearLayout>
			
			<LinearLayout
				style="@style/block"
				android:orientation="horizontal" >

            	<TextView
                	style="@style/labelStyle"
                	android:text="@string/title_ubicacion" />

            	<TextView
                	android:id="@+id/ubicacion_tv"
                	style="@style/data" />
			</LinearLayout>
			
			<LinearLayout
				style="@style/block"
				android:orientation="horizontal" >

            	<TextView
                	style="@style/labelStyle"
                	android:text="@string/title_lupdate" />

            	<TextView
                	android:id="@+id/lupdate_tv"
                	style="@style/data" />
			</LinearLayout>
			
			<LinearLayout
				style="@style/block"
				android:orientation="horizontal" >

            	<TextView
                	style="@style/labelStyle"
                	android:text="@string/title_banda_media" />

            	<TextView
                	android:id="@+id/banda_media_tv"
                	style="@style/data" />
			</LinearLayout>
			
            <TextView
                style="@style/labelStyle"
                android:text="@string/title_live_data" />

            <TextView
                android:id="@+id/sensor_data_tv"
                style="@style/data" />
        	
		</LinearLayout>
    </ScrollView>

	<com.androidplot.xy.XYPlot
		android:id="@+id/aprHistoryPlot"
		android:layout_below="@+id/scroll" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0.3"
		android:layout_marginTop="10px"
		android:layout_marginLeft="10px"
		android:layout_marginRight="10px"
		title="Historia"
	/>

</RelativeLayout>
